--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
 
 </head>
-
 <body>
 
   <div id="wrap">
-
     <div id="header">
-
         <input type="checkbox" id="menuToggle">
 
         <div id="top">
@@ -26,8 +23,8 @@
               <i class="fa fa-bars" aria-hidden="true"></i>
             </label>
           </div>
-
         </div>
+
         <div class="nav">
           <ul id="menu">
             <li><a class="active" href="css/.."><i class="fa fa-home fa-fw n" aria-hidden="true"></i> Home</a></li>
@@ -38,8 +35,6 @@
             <li><a href="about"><i class="fa fa-info-circle fa-fw n" aria-hidden="true"></i> About</a></li>
           </ul>
         </div>
-
-
     </div>
 
     <div id="page">
@@ -57,17 +52,15 @@
           <a href="circuits"><img class="homepics" src="img/homecircuit.png"></a>
         </div>
 
-        <div>
-          <p>
-            Learn the design theory behind different types of circuits that use resistors,
-            capacitors, inductors, diodes, and transistors. The basic operation
-            behind circuits such as amplifiers, power converters, oscillators,
-            and more, are explained. Calculated examples are given along with
-            possible applications and considerations. Other relevant circuit topics
-            are also included. Be sure to check out different articles as you may
-            end up learning something you didn't before!
-          </p>
-        </div>
+        <p>
+          Learn the design theory behind different types of circuits that use resistors,
+          capacitors, inductors, diodes, and transistors. The basic operation
+          behind circuits such as amplifiers, power converters, oscillators,
+          and more, are explained. Calculated examples are given along with
+          possible applications and considerations. Other relevant circuit topics
+          are also included. Be sure to check out different articles as you may
+          end up learning something you didn't before!
+        </p>
       </div>
 
       <div class="homenav">
@@ -76,18 +69,16 @@
           <a href="projects"><img class="homepics" src="img/homeprojects.jpg"></a>
         </div>
 
-        <div>
-          <p>
-            Explore various projects that incoporate different circuit concepts.
-            Every project includes a parts life and step-by-step instructions
-            that anyone can follow.
-            Simulation waveforms and bench-top measurements are included to verify
-            the performance of the circuit. The circuits are initially tested on a
-            bread-board, and then some are built on a perf-board or
-            designed on a PCB. Insight is given for the process of PCB design.
-            Each project is a great way to experience how real circuits perform.
-          </p>
-        </div>
+        <p>
+          Explore various projects that incoporate different circuit concepts.
+          Every project includes a parts life and step-by-step instructions
+          that anyone can follow.
+          Simulation waveforms and bench-top measurements are included to verify
+          the performance of the circuit. The circuits are initially tested on a
+          bread-board, and then some are built on a perf-board or
+          designed on a PCB. Insight is given for the process of PCB design.
+          Each project is a great way to experience how real circuits perform.
+        </p>
       </div>
 
       <div class="homenav">
@@ -96,23 +87,18 @@
           <a href="resources"><img class="homepics" src="img/homeresources.JPG"></a>
         </div>
 
-        <div>
-          <p>
-            Learn about the different resources avaible when it comes to circuits.
-            Here i discuss what types of simulators to use and direct you to
-            helpful 3rd party websites.
-          </p>
-        </div>
+        <p>
+          Learn about the different resources avaible when it comes to circuits.
+          Here i discuss what types of simulators to use and direct you to
+          helpful 3rd party websites.
+        </p>
       </div>
-
-
     </div>
-
     <div id="push"></div>
   </div>
 
   <div id="footer">
-    <div>DesigningCircuits © 2016. All Rights Reserved.</div>
+    <div>Copyright © 2017 DesigningCircuits. All Rights Reserved.</div>
     <div>
       <a href="css/..">Home</a> |
       <a href="circuits">Circuits</a> |
